[gd_scene load_steps=3 format=3 uid="uid://ghi2jq7gpdx0"]

[ext_resource type="Script" uid="uid://cosjxt4ra2aiy" path="res://scenes/game/api_scenes/save_level.gd" id="1_wd2id"]
[ext_resource type="Theme" uid="uid://dct7dwc7568bd" path="res://fonts/MinimalUI.tres" id="2_qc10h"]

[node name="SaveLevel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wd2id")

[node name="Hbox" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -252.0
offset_top = -133.0
offset_right = 252.0
offset_bottom = 367.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Input" type="VBoxContainer" parent="Hbox"]
custom_minimum_size = Vector2(250, 250)
layout_mode = 2

[node name="LevelName" type="LineEdit" parent="Hbox/Input"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("2_qc10h")
placeholder_text = "Level Name"

[node name="SaveLevelButton" type="Button" parent="Hbox/Input"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("2_qc10h")
text = "Save Level"

[node name="Output" type="VBoxContainer" parent="Hbox"]
custom_minimum_size = Vector2(250, 250)
layout_mode = 2

[node name="LevelCode" type="LineEdit" parent="Hbox/Output"]
unique_name_in_owner = true
custom_minimum_size = Vector2(250, 43)
layout_mode = 2
theme = ExtResource("2_qc10h")
editable = false

[node name="CopyCode" type="Button" parent="Hbox/Output"]
layout_mode = 2
theme = ExtResource("2_qc10h")
text = "Copy Code
"

[node name="StateLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -125.0
offset_top = -168.5
offset_right = 125.0
offset_bottom = -145.5
grow_horizontal = 2
grow_vertical = 2
horizontal_alignment = 1

[node name="ReturnToLevelBuilder" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -31.0
offset_right = 250.0
grow_vertical = 0
theme = ExtResource("2_qc10h")
text = "Return To Level Builder"

[node name="ReturnToMenu" type="Button" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -250.0
offset_top = -31.0
grow_horizontal = 0
grow_vertical = 0
theme = ExtResource("2_qc10h")
text = "Return To Menu (Level Will Be Erased Forever)"

[connection signal="pressed" from="Hbox/Input/SaveLevelButton" to="." method="_on_save_level_button_pressed"]
[connection signal="pressed" from="Hbox/Output/CopyCode" to="." method="_on_copy_code_pressed"]
[connection signal="pressed" from="ReturnToLevelBuilder" to="." method="_on_return_to_level_builder_pressed"]
[connection signal="pressed" from="ReturnToMenu" to="." method="_on_return_to_menu_pressed"]
